correct work-section spacing with margins

--- a/CSS/cStyleSedit.css
+++ b/CSS/cStyleSedit.css
@@ -28,7 +28,7 @@ $ashgray: #bcbfb5;
 $shinyshamrock: #4eaa70;
 $iguanagreen: #72aa86;
 
-/*  Global styles  */
+/************  Global styles  *******/
 html {
   box-sizing: border-box;
 }
@@ -90,7 +90,7 @@ h4 {
 
 p {
   line-height: 1.5;
-  margin: 11 0 0 0;
+  margin: 11px 0 0px 0;
 }
 
 h5 {
@@ -127,7 +127,7 @@ a:hover {
   text-transform: uppercase;
 }
 
-/*  Download Button  */
+/********  Download Button  **********/
 .btn {
   text-decoration: none;
   color: var(--coffee);
@@ -144,7 +144,7 @@ a:hover {
   /* 4px 5px 4px #47897D; */
 }
 
-/*   Header  */
+/**********   Header  ***********/
 header {
   font-weight:800;
   padding-top: 50px;
@@ -187,7 +187,7 @@ header h2 {
   bottom: 0;
 }
 
-/*  Footer  */
+/************  Footer  *********/
 footer {
   text-align:center;
   color: var(--silver);
@@ -218,13 +218,13 @@ footer {
    box-shadow: 3px 3px 8px var(--coffee);
    color: #011936;
  }
- /*   Header and Footer  */
+ /********   Header and Footer  *******/
  header, footer {
    background-color: var(--alabaster);
    color: var(--rustic);
 }
 
-/*  Navigation  */
+/*****  Navigation  *******/
 nav {
   background-color: var(--silver);
   margin-bottom: 5px;
@@ -251,7 +251,7 @@ nav a:hover {
   background-color: var(--coffee);
 }
 
-/*  Work Experience  */
+/********  Work Experience  ************/
 .work {
   background-color: var(--mango);
   background-image: radial-gradient(farthest-side at 83% 21%, rgba(255,255,255,0.9) , #fcbf49 90%);
@@ -280,8 +280,13 @@ h3 ~ p {
 }
 
 .job-tit {
+  margin-bottom: 5px;
   font-style: italic;
   font-size: 1.2em;
+}
+
+.job-description li:first-of-type {
+  margin-top: -10px;
 }
 
 /*  Education  */
